--- a/doc/agile/v1/sprint_backlog_15.org
+++ b/doc/agile/v1/sprint_backlog_15.org
@@ -13,17 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-19 Fri 16:14]
+#+CAPTION: Clock summary at [2019-04-19 Fri 16:21]
 | <75>                                                              |         |       |       |       |
 | Headline                                                          | Time    |       |       |     % |
 |-------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                      | *70:21* |       |       | 100.0 |
+| *Total time*                                                      | *70:27* |       |       | 100.0 |
 |-------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                           | 70:21   |       |       | 100.0 |
-| Active                                                            |         | 70:21 |       | 100.0 |
+| Stories                                                           | 70:27   |       |       | 100.0 |
+| Active                                                            |         | 70:27 |       | 100.0 |
 | Edit release notes for previous sprint                            |         |       |  4:21 |   6.2 |
 | Sprint and product backlog grooming                               |         |       |  7:06 |  10.1 |
-| Create a video demo for the previous sprint's features            |         |       |  1:35 |   2.3 |
+| Create a video demo for the previous sprint's features            |         |       |  1:35 |   2.2 |
 | Fix issues with emacs                                             |         |       |  2:01 |   2.9 |
 | Fix issues with nightly build                                     |         |       |  0:08 |   0.2 |
 | Add diffing support to string asserter                            |         |       |  1:00 |   1.4 |
@@ -31,11 +31,11 @@
 | Reactivate the boilerplate tests                                  |         |       |  5:58 |   8.5 |
 | Update to clang8                                                  |         |       |  0:11 |   0.3 |
 | Do not hard-code static library generation                        |         |       |  1:01 |   1.4 |
+| Generated models should support both static and dynamic libraries |         |       |  0:09 |   0.2 |
 | Nursing nightlies                                                 |         |       |  0:49 |   1.2 |
 | Fix snags with emacs                                              |         |       |  6:00 |   8.5 |
 | Profiles as meta-model elements                                   |         |       |  8:01 |  11.4 |
-| Redesign annotations model                                        |         |       | 27:55 |  39.7 |
-| Generated models should support both static and dynamic libraries |         |       |  0:03 |   0.1 |
+| Redesign annotations model                                        |         |       | 27:55 |  39.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -358,6 +358,19 @@ several in the literature.
 It seems we need to support building shared libraries in order to use
 cling at present. However, we've hard-coded dogen to use static
 libraries. Remove the hard-coding.
+
+*** COMPLETED Generated models should support both static and dynamic libraries :story:
+    CLOSED: [2019-04-19 Fri 16:21]
+    :LOGBOOK:
+    CLOCK: [2019-04-19 Fri 16:15]--[2019-04-19 Fri 16:21] =>  0:06
+    CLOCK: [2019-04-19 Fri 16:11]--[2019-04-19 Fri 16:14] =>  0:03
+    :END:
+
+At present we have hard-coded the CMake files to generate static
+libraries on all generated . We should allow the user to choose at
+build time. See other story:
+
+- Allow user to choose whether to build shared or static libraries
 
 *** STARTED Nursing nightlies                                         :story:
     :LOGBOOK:
@@ -783,17 +796,6 @@ Tasks:
 - rename type group to feature group. Leave traits as is for now.
 - rename annotation to configuration.
 - create archetype model and mode archetype related types there.
-
-*** STARTED Generated models should support both static and dynamic libraries :story:
-    :LOGBOOK:
-    CLOCK: [2019-04-19 Fri 16:11]--[2019-04-19 Fri 16:14] =>  0:03
-    :END:
-
-At present we have hard-coded the CMake files to generate static
-libraries on all generated . We should allow the user to choose at
-build time. See other story:
-
-- Allow user to choose whether to build shared or static libraries
 
 *** Enablement problem is in the variability domain                   :story:
 
