--- a/doc/agile/v1/sprint_backlog_15.org
+++ b/doc/agile/v1/sprint_backlog_15.org
@@ -13,29 +13,30 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-19 Fri 16:21]
+#+CAPTION: Clock summary at [2019-04-19 Fri 17:01]
 | <75>                                                              |         |       |       |       |
 | Headline                                                          | Time    |       |       |     % |
 |-------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                      | *70:27* |       |       | 100.0 |
+| *Total time*                                                      | *71:05* |       |       | 100.0 |
 |-------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                           | 70:27   |       |       | 100.0 |
-| Active                                                            |         | 70:27 |       | 100.0 |
-| Edit release notes for previous sprint                            |         |       |  4:21 |   6.2 |
-| Sprint and product backlog grooming                               |         |       |  7:06 |  10.1 |
+| Stories                                                           | 71:05   |       |       | 100.0 |
+| Active                                                            |         | 71:05 |       | 100.0 |
+| Edit release notes for previous sprint                            |         |       |  4:21 |   6.1 |
+| Sprint and product backlog grooming                               |         |       |  7:06 |  10.0 |
 | Create a video demo for the previous sprint's features            |         |       |  1:35 |   2.2 |
-| Fix issues with emacs                                             |         |       |  2:01 |   2.9 |
+| Fix issues with emacs                                             |         |       |  2:01 |   2.8 |
 | Fix issues with nightly build                                     |         |       |  0:08 |   0.2 |
 | Add diffing support to string asserter                            |         |       |  1:00 |   1.4 |
-| C# generation is borked                                           |         |       |  4:12 |   6.0 |
-| Reactivate the boilerplate tests                                  |         |       |  5:58 |   8.5 |
+| C# generation is borked                                           |         |       |  4:12 |   5.9 |
+| Reactivate the boilerplate tests                                  |         |       |  5:58 |   8.4 |
 | Update to clang8                                                  |         |       |  0:11 |   0.3 |
 | Do not hard-code static library generation                        |         |       |  1:01 |   1.4 |
 | Generated models should support both static and dynamic libraries |         |       |  0:09 |   0.2 |
-| Nursing nightlies                                                 |         |       |  0:49 |   1.2 |
-| Fix snags with emacs                                              |         |       |  6:00 |   8.5 |
-| Profiles as meta-model elements                                   |         |       |  8:01 |  11.4 |
-| Redesign annotations model                                        |         |       | 27:55 |  39.6 |
+| Fix cmake emacs variable for tab width                            |         |       |  0:38 |   0.9 |
+| Nursing nightlies                                                 |         |       |  0:49 |   1.1 |
+| Fix snags with emacs                                              |         |       |  6:00 |   8.4 |
+| Profiles as meta-model elements                                   |         |       |  8:01 |  11.3 |
+| Redesign annotations model                                        |         |       | 27:55 |  39.3 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -371,6 +372,20 @@ libraries on all generated . We should allow the user to choose at
 build time. See other story:
 
 - Allow user to choose whether to build shared or static libraries
+
+*** COMPLETED Fix cmake emacs variable for tab width                  :story:
+    CLOSED: [2019-04-19 Fri 17:00]
+    :LOGBOOK:
+    CLOCK: [2019-04-19 Fri 16:22]--[2019-04-19 Fri 17:00] =>  0:38
+    :END:
+
+We need to replace uses of =tab-width= in cmake files with
+=cmake-tab-width=, as explained here:
+
+[[http://stackoverflow.com/questions/25751408/controlling-the-indent-offset-for-cmake-in-emacs][Controlling the indent/offset for CMake in emacs]]
+
+We need to do this for both code generated and manually generated
+files.
 
 *** STARTED Nursing nightlies                                         :story:
     :LOGBOOK:
