--- a/doc/agile/v1/sprint_backlog_15.org
+++ b/doc/agile/v1/sprint_backlog_15.org
@@ -13,20 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-19 Fri 20:32]
+#+CAPTION: Clock summary at [2019-04-19 Fri 20:49]
 | <75>                                                              |         |       |       |       |
 | Headline                                                          | Time    |       |       |     % |
 |-------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                      | *73:50* |       |       | 100.0 |
+| *Total time*                                                      | *74:06* |       |       | 100.0 |
 |-------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                           | 73:50   |       |       | 100.0 |
-| Active                                                            |         | 73:50 |       | 100.0 |
+| Stories                                                           | 74:06   |       |       | 100.0 |
+| Active                                                            |         | 74:06 |       | 100.0 |
 | Edit release notes for previous sprint                            |         |       |  4:21 |   5.9 |
 | Sprint and product backlog grooming                               |         |       |  7:06 |   9.6 |
 | Create a video demo for the previous sprint's features            |         |       |  1:35 |   2.1 |
 | Fix issues with emacs                                             |         |       |  2:01 |   2.7 |
 | Fix issues with nightly build                                     |         |       |  0:08 |   0.2 |
-| Add diffing support to string asserter                            |         |       |  1:00 |   1.4 |
+| Add diffing support to string asserter                            |         |       |  1:00 |   1.3 |
 | C# generation is borked                                           |         |       |  4:12 |   5.7 |
 | Reactivate the boilerplate tests                                  |         |       |  5:58 |   8.1 |
 | Update to clang8                                                  |         |       |  0:11 |   0.2 |
@@ -35,8 +35,8 @@
 | Fix cmake emacs variable for tab width                            |         |       |  0:38 |   0.9 |
 | Nursing nightlies                                                 |         |       |  0:49 |   1.1 |
 | Fix snags with emacs                                              |         |       |  6:00 |   8.1 |
-| Profiles as meta-model elements                                   |         |       |  8:01 |  10.9 |
-| Redesign annotations model                                        |         |       | 30:40 |  41.5 |
+| Profiles as meta-model elements                                   |         |       |  8:01 |  10.8 |
+| Redesign annotations model                                        |         |       | 30:56 |  41.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -692,6 +692,7 @@ Notes:
 
 *** STARTED Redesign annotations model                                :story:
     :LOGBOOK:
+    CLOCK: [2019-04-19 Fri 20:33]--[2019-04-19 Fri 20:49] =>  0:16
     CLOCK: [2019-04-19 Fri 18:01]--[2019-04-19 Fri 20:32] =>  2:31
     CLOCK: [2019-04-19 Fri 17:01]--[2019-04-19 Fri 17:15] =>  0:40
     CLOCK: [2019-04-18 Thu 18:39]--[2019-04-18 Thu 18:50] =>  0:11
