--- a/doc/agile/v1/sprint_backlog_15.org
+++ b/doc/agile/v1/sprint_backlog_15.org
@@ -13,30 +13,30 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-19 Fri 20:49]
+#+CAPTION: Clock summary at [2019-04-20 Sat 07:15]
 | <75>                                                              |         |       |       |       |
 | Headline                                                          | Time    |       |       |     % |
 |-------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                      | *74:06* |       |       | 100.0 |
+| *Total time*                                                      | *74:35* |       |       | 100.0 |
 |-------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                           | 74:06   |       |       | 100.0 |
-| Active                                                            |         | 74:06 |       | 100.0 |
-| Edit release notes for previous sprint                            |         |       |  4:21 |   5.9 |
-| Sprint and product backlog grooming                               |         |       |  7:06 |   9.6 |
+| Stories                                                           | 74:35   |       |       | 100.0 |
+| Active                                                            |         | 74:35 |       | 100.0 |
+| Edit release notes for previous sprint                            |         |       |  4:21 |   5.8 |
+| Sprint and product backlog grooming                               |         |       |  7:06 |   9.5 |
 | Create a video demo for the previous sprint's features            |         |       |  1:35 |   2.1 |
 | Fix issues with emacs                                             |         |       |  2:01 |   2.7 |
 | Fix issues with nightly build                                     |         |       |  0:08 |   0.2 |
 | Add diffing support to string asserter                            |         |       |  1:00 |   1.3 |
-| C# generation is borked                                           |         |       |  4:12 |   5.7 |
-| Reactivate the boilerplate tests                                  |         |       |  5:58 |   8.1 |
+| C# generation is borked                                           |         |       |  4:12 |   5.6 |
+| Reactivate the boilerplate tests                                  |         |       |  5:58 |   8.0 |
 | Update to clang8                                                  |         |       |  0:11 |   0.2 |
 | Do not hard-code static library generation                        |         |       |  1:01 |   1.4 |
 | Generated models should support both static and dynamic libraries |         |       |  0:09 |   0.2 |
-| Fix cmake emacs variable for tab width                            |         |       |  0:38 |   0.9 |
-| Nursing nightlies                                                 |         |       |  0:49 |   1.1 |
-| Fix snags with emacs                                              |         |       |  6:00 |   8.1 |
-| Profiles as meta-model elements                                   |         |       |  8:01 |  10.8 |
-| Redesign annotations model                                        |         |       | 30:56 |  41.7 |
+| Fix cmake emacs variable for tab width                            |         |       |  0:38 |   0.8 |
+| Nursing nightlies                                                 |         |       |  1:18 |   1.7 |
+| Fix snags with emacs                                              |         |       |  6:00 |   8.0 |
+| Profiles as meta-model elements                                   |         |       |  8:01 |  10.7 |
+| Redesign annotations model                                        |         |       | 30:56 |  41.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -389,6 +389,7 @@ files.
 
 *** STARTED Nursing nightlies                                         :story:
     :LOGBOOK:
+    CLOCK: [2019-04-20 Sat 06:46]--[2019-04-20 Sat 07:15] =>  0:29
     CLOCK: [2019-04-18 Thu 06:15]--[2019-04-18 Thu 06:24] =>  0:09
     CLOCK: [2019-04-17 Wed 07:01]--[2019-04-17 Wed 07:19] =>  0:18
     CLOCK: [2019-04-16 Tue 06:50]--[2019-04-16 Tue 07:12] =>  0:22
