--- a/doc/agile/v1/sprint_backlog_15.org
+++ b/doc/agile/v1/sprint_backlog_15.org
@@ -13,21 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-20 Sat 18:03]
+#+CAPTION: Clock summary at [2019-04-21 Sun 11:59]
 | <75>                                                              |         |       |       |       |
 | Headline                                                          | Time    |       |       |     % |
 |-------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                      | *78:06* |       |       | 100.0 |
+| *Total time*                                                      | *78:40* |       |       | 100.0 |
 |-------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                           | 78:06   |       |       | 100.0 |
-| Active                                                            |         | 78:06 |       | 100.0 |
-| Edit release notes for previous sprint                            |         |       |  4:21 |   5.6 |
-| Sprint and product backlog grooming                               |         |       |  7:06 |   9.1 |
+| Stories                                                           | 78:40   |       |       | 100.0 |
+| Active                                                            |         | 78:40 |       | 100.0 |
+| Edit release notes for previous sprint                            |         |       |  4:21 |   5.5 |
+| Sprint and product backlog grooming                               |         |       |  7:06 |   9.0 |
 | Create a video demo for the previous sprint's features            |         |       |  1:35 |   2.0 |
 | Fix issues with emacs                                             |         |       |  2:01 |   2.6 |
 | Fix issues with nightly build                                     |         |       |  0:08 |   0.2 |
 | Add diffing support to string asserter                            |         |       |  1:00 |   1.3 |
-| C# generation is borked                                           |         |       |  4:12 |   5.4 |
+| C# generation is borked                                           |         |       |  4:12 |   5.3 |
 | Reactivate the boilerplate tests                                  |         |       |  5:58 |   7.6 |
 | Update to clang8                                                  |         |       |  0:11 |   0.2 |
 | Do not hard-code static library generation                        |         |       |  1:01 |   1.3 |
@@ -35,9 +35,9 @@
 | Fix cmake emacs variable for tab width                            |         |       |  0:38 |   0.8 |
 | Re-read variability modeling papers                               |         |       |  2:59 |   3.8 |
 | Nursing nightlies                                                 |         |       |  1:50 |   2.3 |
-| Fix snags with emacs                                              |         |       |  6:00 |   7.7 |
-| Profiles as meta-model elements                                   |         |       |  8:01 |  10.3 |
-| Redesign annotations model                                        |         |       | 30:56 |  39.6 |
+| Fix snags with emacs                                              |         |       |  6:00 |   7.6 |
+| Profiles as meta-model elements                                   |         |       |  8:01 |  10.2 |
+| Redesign annotations model                                        |         |       | 31:30 |  40.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -801,6 +801,7 @@ Notes:
 
 *** STARTED Redesign annotations model                                :story:
     :LOGBOOK:
+    CLOCK: [2019-04-21 Sun 11:25]--[2019-04-21 Sun 11:59] =>  0:34
     CLOCK: [2019-04-19 Fri 20:33]--[2019-04-19 Fri 20:49] =>  0:16
     CLOCK: [2019-04-19 Fri 18:01]--[2019-04-19 Fri 20:32] =>  2:31
     CLOCK: [2019-04-19 Fri 17:01]--[2019-04-19 Fri 17:15] =>  0:40
