--- a/doc/agile/v1/sprint_backlog_15.org
+++ b/doc/agile/v1/sprint_backlog_15.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-21 Sun 12:05]
+#+CAPTION: Clock summary at [2019-04-21 Sun 12:18]
 | <75>                                                              |         |       |       |       |
 | Headline                                                          | Time    |       |       |     % |
 |-------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                      | *78:45* |       |       | 100.0 |
+| *Total time*                                                      | *78:56* |       |       | 100.0 |
 |-------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                           | 78:45   |       |       | 100.0 |
-| Active                                                            |         | 78:45 |       | 100.0 |
+| Stories                                                           | 78:56   |       |       | 100.0 |
+| Active                                                            |         | 78:56 |       | 100.0 |
 | Edit release notes for previous sprint                            |         |       |  4:21 |   5.5 |
 | Sprint and product backlog grooming                               |         |       |  7:06 |   9.0 |
 | Create a video demo for the previous sprint's features            |         |       |  1:35 |   2.0 |
@@ -37,7 +37,7 @@
 | Nursing nightlies                                                 |         |       |  1:50 |   2.3 |
 | Fix snags with emacs                                              |         |       |  6:00 |   7.6 |
 | Profiles as meta-model elements                                   |         |       |  8:01 |  10.2 |
-| Redesign annotations model                                        |         |       | 31:35 |  40.1 |
+| Redesign annotations model                                        |         |       | 31:46 |  40.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -801,6 +801,7 @@ Notes:
 
 *** STARTED Redesign annotations model                                :story:
     :LOGBOOK:
+    CLOCK: [2019-04-21 Sun 12:06]--[2019-04-21 Sun 12:17] =>  0:11
     CLOCK: [2019-04-21 Sun 12:00]--[2019-04-21 Sun 12:05] =>  0:05
     CLOCK: [2019-04-21 Sun 11:25]--[2019-04-21 Sun 11:59] =>  0:34
     CLOCK: [2019-04-19 Fri 20:33]--[2019-04-19 Fri 20:49] =>  0:16
